--- a/content/blog/quarkus-and-testcontainers.asciidoc
+++ b/content/blog/quarkus-and-testcontainers.asciidoc
@@ -14,9 +14,9 @@ endif::[]
 The https://www.testcontainers.org/[Testcontainers] project is invaluable for spinning up containerized resources during your (JUnit) tests,
 e.g. databases or Kafka clusters.
 
-The project provides the https://www.testcontainers.org/quickstart/junit_5_quickstart/[`@Testcontainers`] JUnit extension for controlling the lifecycle of containers used by a test.
-When testing a https://quarkus.io/[Quarkus] application though, this is at odds somewhat with Quarkus' own https://quarkus.io/guides/getting-started-testing#recap-of-http-based-testing-in-jvm-mode[`@QuarkusTest`] extension;
-it's a best practice to avoid fixed ports for any containers started by Testcontainers.
+For users of JUnit 5, the project provides the https://www.testcontainers.org/quickstart/junit_5_quickstart/[`@Testcontainers`] extension, which controls the lifecycle of containers used by a test.
+When testing a https://quarkus.io/[Quarkus] application though, this is at odds with Quarkus' own https://quarkus.io/guides/getting-started-testing#recap-of-http-based-testing-in-jvm-mode[`@QuarkusTest`] extension;
+it's a recommended https://bsideup.github.io/posts/testcontainers_fixed_ports/[best practice] to avoid fixed ports for any containers started by Testcontainers.
 Instead, you should rely on Docker to automatically allocate random free ports.
 This avoids conflicts between concurrently running tests,
 e.g. amongst multiple Postgres containers,
@@ -25,14 +25,15 @@ Obtaining the randomly assigned port and passing it into the Quarkus bootstrap p
 
 <!--more-->
 
-One work-around you can find described https://stackoverflow.com/questions/61447252/integration-testing-with-testcontainers-quarkus-mongodb[e.g. on StackOverflow] is setting up the database container via a static class initializer block and then propagating the host and port to Quarkus as system properties.
-While this works, it's not ideal in terms of lifecycle control (e.g. how to make sure the container is started up once at the beginning of an entire test suite), and in general, it just feels a bit hack-ish .
+One work-around you can find described https://stackoverflow.com/questions/61447252/integration-testing-with-testcontainers-quarkus-mongodb[e.g. on StackOverflow] is setting up the database container via a static class initializer block and then propagating the host and port to Quarkus through system properties.
+While this works, it's not ideal in terms of lifecycle control (e.g. how to make sure the container is started up once at the beginning of an entire test suite), and in general, it just feels a bit hack-ish.
 
 Luckily, there's a better alternative, which interestingly isn't discussed as much:
 using Quarkus' notion of _test resources_.
 There's just two steps involved.
 First, create an implementation of the `QuarkusTestResourceLifecycleManager` interface,
-which controls your resource's lifecycle:
+which controls your resource's lifecycle.
+In case of a Postgres database, this could look like this:
 
 [source,java]
 ----
@@ -59,16 +60,16 @@ public class PostgresResource implements
   }
 }
 ----
-<1> Configure the database container, using Postgres 13, the given database name, and credentials
-<2> Start up the database; the returned map of configuration properties amends/overrides the configuration properties of the test, in this case the datasource URL, which contains the randomly allocated public port of the Postgres container
+<1> Configure the database container, using the Postgres 13 container image, the given database name, and credentials
+<2> Start up the database; the returned map of configuration properties amends/overrides the configuration properties of the test; in this case the datasource URL will be overridden with the value obtained from Testcontainers, which contains the randomly allocated public port of the Postgres container
 <3> Shut down the database after all tests have been executed
 
-All you then need to do is to reference that test resource from your test class:
+All you then need to do is to reference that test resource from your test class using the `@QuarkusTestResource` annotation:
 
 [source,java]
 ----
 @QuarkusTest
-@QuarkusTestResource(PostgresResource.class)
+@QuarkusTestResource(PostgresResource.class) // <1>
 public class TodoResourceTest {
 
   @Test
@@ -97,6 +98,7 @@ public class TodoResourceTest {
   }
 }
 ----
+<1> Ensures the Postgres database is started up
 
 And that's it! Note that _all_ the test resources of the test module are detected and started up,
 before starting the first test.
@@ -118,7 +120,7 @@ such as tables, sequences, indexes etc.
 This means that while a load script is great for inserting test data,
 it's executed too late for defining the actual database schema itself.
 
-Luckily, also most database container images themselves support the execution of load scripts right upon database start-up;
+Luckily, most database container images themselves support the execution of load scripts right upon database start-up;
 The Postgres image is no exception,
 so it's just a matter of exposing that script via Testcontainers.
 All it needs for that is a bit of tweaking of the Quarkus test resource for Postgres:
@@ -139,4 +141,6 @@ static PostgreSQLContainer<?> db =
 With that in place, Postgres will start up and the "todo" schema will be created in the database,
 before Quarkus boots Hibernate ORM, which will populate the schema, and finally, all tests can run.
 
-You can find the complete source code in this repository on GitHub. TODO
+You can find the https://github.com/gunnarmorling/jfr-custom-events/blob/master/example-service/src/test/java/dev/morling/demos/quarkus/TodoResourceTest.java[complete source code] of this test and the Postgres test resource on GitHub.
+
+_Many thanks to https://twitter.com/bsideup[Sergei Egorov] for his feedback while writing this blog post!_
