--- a/content/blog/quarkus-and-testcontainers.asciidoc
+++ b/content/blog/quarkus-and-testcontainers.asciidoc
@@ -56,7 +56,7 @@ public class PostgresResource implements
 
   @Override
   public void stop() { // <3>
-    db.close();
+    db.stop();
   }
 }
 ----
