--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -8,11 +8,12 @@ type: "page"
 This page gives an overview over some talks I have done over the last years.
 I have spoken at large conferences such as QCon San Francisco, Devoxx and JavaOne, local meet-ups as well as company-internal events, covering topics such as Debezium and Change Data Capture, Bean Validation, NoSQL and more.
 
-If you'd like me to have as a speaker at your conference or meet-up, please get in touch.
+If you'd like to have me as a speaker at your conference or meet-up, please get in touch.
 
 == 2020
 
 * JokerConf (online): https://jokerconf.com/en/2020/talks/4ycp4y8xshqmlt0kbpacwv/[Change data capture pipelines with Debezium and Kafka Streams]
+* Virtual JUG (joint presentation with Andres Almiray; online): recording[https://www.youtube.com/watch?v=iJyys_LgG-U], slides[https://speakerdeck.com/gunnarmorling/plug-in-architectures-with-layrry-and-the-java-module-system-vjug]
 * QConPlus (online): https://plus.qconferences.com/plus2020/presentation/serverless-search-my-blog-java-quarkus-aws-lambda[Serverless Search for My Blog With Java, Quarkus, & AWS Lambda]
 * JFall (joint presentation with Andres Almiray; online): https://jfall.nl/sessions/plug-in-architectures-for-java-with-layrry-and-the-java-module-system/[Plug-in Architectures for Java With Layrry and the Java Module System]
 * Java Day Istanbul (online): Change Data Streaming Use Cases With Apache Kafka & Debezium
