--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -13,7 +13,7 @@ If you'd like to have me as a speaker at your conference or meet-up, please get 
 == 2020
 
 * JokerConf (online): https://jokerconf.com/en/2020/talks/4ycp4y8xshqmlt0kbpacwv/[Change data capture pipelines with Debezium and Kafka Streams]
-* Virtual JUG (joint presentation with Andres Almiray; online): recording[https://www.youtube.com/watch?v=iJyys_LgG-U], slides[https://speakerdeck.com/gunnarmorling/plug-in-architectures-with-layrry-and-the-java-module-system-vjug]
+* Virtual JUG (joint presentation with Andres Almiray; online): https://www.youtube.com/watch?v=iJyys_LgG-U[recording], https://speakerdeck.com/gunnarmorling/plug-in-architectures-with-layrry-and-the-java-module-system-vjug[slides]
 * QConPlus (online): https://plus.qconferences.com/plus2020/presentation/serverless-search-my-blog-java-quarkus-aws-lambda[Serverless Search for My Blog With Java, Quarkus, & AWS Lambda]
 * JFall (joint presentation with Andres Almiray; online): https://jfall.nl/sessions/plug-in-architectures-for-java-with-layrry-and-the-java-module-system/[Plug-in Architectures for Java With Layrry and the Java Module System]
 * Java Day Istanbul (online): Change Data Streaming Use Cases With Apache Kafka & Debezium
