--- a/content/blog/how-i-learned-to-stop-worrying-and-love-performance-regression-tests.asciidoc
+++ b/content/blog/how-i-learned-to-stop-worrying-and-love-performance-regression-tests.asciidoc
@@ -380,7 +380,14 @@ image::continuous_perf_testing_gc_original.png[Garbage collections before the pe
 
 Pause times are worse, directly impacting the application's latency, and the largely increased GC volume means the environment will be able to serve less concurrent requests when reaching its capacity.
 Meaning, you'd have to provision another machine earlier on as your load increases.
-On a side note, there seems to be a memory leak before _and_ after the code change, as indicated by the ever increased heap size post GC, but I'll leave it for another time to analyze that.
+
+[NOTE]
+.Memory Leak in the JFR Event Streaming API
+====
+The astute reader may have noticed that there is a memory leak before _and_ after the code change, as indicated by the ever increased heap size post GC.
+After some exploration https://mail.openjdk.java.net/pipermail/hotspot-jfr-dev/2020-December/001972.html[it turned out] that this is a bug in the JFR event streaming API which holds on to all the `RecordedEvent` instances internally.
+https://twitter.com/ErikGahlin[Erik Gahlin] from the OpenJDK team logged https://bugs.openjdk.java.net/browse/JDK-8257906[JDK-8257906] for tracking and hopefully fixing this in JDK 16.
+====
 
 Now such drastic increase of allocation and impact on performance should hopefully be an exception rather than a regular situation.
 But the example shows how continuous performance tests on metrics like memory allocation via Flight Recorder and JfrUnit can help to identify performance issues in an automated and reliable way,
@@ -450,6 +457,65 @@ private long getBytesReadOrWritten(RecordedEvent re) { // <5>
 <4> Only read and write events on the database port are relevant for this test, but e.g. not I/O on the web port of the application
 <5> Retrieve the value of the `bytesRead` or `bytesWritten` field, depending on the event type
 
+Now let's again assume that after some time the test begins to fail, this time it's the assertion on the number of executed reads and writes:
+
+[source]
+----
+AssertionFailedError: 
+Expecting:
+ <18L>
+to be equal to:
+ <4L>
+but was not.
+----
+
+Also the number of bytes read and written has substantially increased:
+
+[source]
+----
+java.lang.AssertionError: 
+Expecting:
+ <1117L>
+to be less than:
+ <250L>
+----
+
+That's definitely something to look into, as increased database I/O implies reduced request latency.
+So let's open the recording of the failed test in Flight Recorder and take a look at the socket read and write events.
+Thanks to enabling stacktraces for the wotJFR event types we can quite quickly identify the events asssociated to an invocation of the `GET /todo/{id}` API:
+
+image::continuous_perf_testing_socket_regression.png[Socket read and write events after the performance regression]
+
+At this point, some familiarity with the application in question will come in handy to identify suspicous events.
+But even without that, we could compare previous recordings of successful test runs with the recording from the failing one to see where differences are.
+In the case at hand, the `BlobInputStream` and Hibernate's `BlobTypeDescriptor` in the call stack are unexpected, as our `User` entity didn't have any `BLOB` attribute before.
+Comparing with the latest version and a look into the git history of that class confirms that there's a new attribute storing an image
+(surely not a best practice to do so ;):
+
+[source]
+----
+@Entity
+public class Todo extends PanacheEntity {
+
+  public String title;
+  public int priority;
+  public boolean completed;
+
+  @Lob
+  public byte[] image;
+}
+----
+
+We now would have to decide whether this image attribute should actually be loaded for this use case and thus should have to adjust the test accordingly,
+or whether it'd for instance make more sense to mark this property as a lazily loaded one and only retrieve it when actually required.
+
+Solely working with the raw socket read and write events can be a bit cumbersome, though.
+Wouldn't it be nice if we also has the actual SQL statement which caused this I/O?
+Glad you asked!
+Neither Hibernate nor the Postgres JDBC driver emit any JFR events at the moment,
+but in part two of this blog post series, we'll discuss how to instrument an existing library to emit events like this,
+using a Java agent, without modifying the library in question.
+
 == Summary and Outlook
 
 == TODO
@@ -467,6 +533,8 @@ metrics not meaningful by themselves, is it much? detect regressions
 no silver bullet or magic, requires understanding and insight into the application
 
 https://bugs.openjdk.java.net/browse/JDK-8257602
+
+don#t need many repetitions
 
 You can find the https://github.com/gunnarmorling/jfr-custom-events/blob/master/example-service/src/test/java/dev/morling/demos/quarkus/TodoResourceTest.java[complete source code] of this test and the Postgres test resource on GitHub.
 
