--- a/content/blog/quarkus-and-testcontainers.asciidoc
+++ b/content/blog/quarkus-and-testcontainers.asciidoc
@@ -1,5 +1,5 @@
 ---
-title: "Quarkus and Testcontainers"
+title: "Quarkus and Testcontainers (Preview)"
 date: 2020-11-28T17:45:00+01:00
 draft: false
 ---
@@ -11,7 +11,7 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-The https://www.testcontainers.org/[Testcontainers] project is invaluable for spinning up containerized resources during your (JUnit) tests,
+(Preview...) The https://www.testcontainers.org/[Testcontainers] project is invaluable for spinning up containerized resources during your (JUnit) tests,
 e.g. databases or Kafka clusters.
 
 For users of JUnit 5, the project provides the https://www.testcontainers.org/quickstart/junit_5_quickstart/[`@Testcontainers`] extension, which controls the lifecycle of containers used by a test.
